blockml/test/errors/12_chart/e195/e195m.model
model: e195m
joins:
- from_view: e195_one
  as: a
